Fixed word wrap on skills console

--- a/personal_portfolio/static/css/skills-console.css
+++ b/personal_portfolio/static/css/skills-console.css
@@ -24,6 +24,11 @@ pre {
     color:white;
     display: block;
     margin: 0;
-    overflow: hidden;
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
